update matchbox